# 96hrs_assigment

./: .gitignore  README.md  requirements.txt  setup.sh  start.sh  streamlit_app.py  upload_avatars_to_supabase.py
.streamlit/: secrets.toml
backend/: .env.example  character_profiles.py  chat_service.py  comfyui_client.py  config.py  cost_logger.py  google_chat.py  image_bridge.py  image_bridge_aio.py  main.py  pose_generator.py  requirements.txt  telegram_notify.py
backend/workflows/: AIO.json  Pose.json  edit_final_AIO.json
comfyui_custom_nodes/ComfyUI-Env-Manager/: README.md  __init__.py  env_manager_server.py  pyproject.toml  requirements.txt
comfyui_custom_nodes/ComfyUI-FramePackWrapper_PlusOne/: .tracking
comfyui_custom_nodes/ComfyUI-GGUF/: pyproject.toml
comfyui_custom_nodes/ComfyUI-HunyuanVideo-Foley/: .tracking
comfyui_custom_nodes/ComfyUI-K3NKImageGrab/: K3NKImageGrab.py  LICENSE  README.md  __init__.py  __nodes__.py  extensions.js  k3nk_find_nearest_bucket.py  k3nk_image_loader_with_blending.py  requirements.txt  save_latent_node.py
comfyui_custom_nodes/ComfyUI-Multiband/: __init__.py  pyproject.toml
comfyui_custom_nodes/whiterabbit/: .gitignore  .tracking  README_zh-CN.md  __init__.py  interpolation.py  noise_control.py  post_process.py  pyproject.toml  readme.md  requirements.txt  scaling.py  video_loop.py
comfyui_custom_nodes/wywywywy-pause/: .gitignore  .tracking  LICENSE  PauseWorkflowNode.py  README.md  __init__.py  manifest.json  pyproject.toml
comfyui_custom_nodes/wywywywy-pause/js/: pause_workflow.js
frontend/app/: globals.css  (+2 more)
(+38 files in other folders)
