[project]
name = "whiterabbit"
description = "Powerful video frame manipulation nodes for ComfyUI such as: efficient high quality batch scaling, arbitrary framerate resampling, seamless video loop tools, batch watermark composite, and more."
version = "1.1.1"
license = {file = "LICENSE"}
classifiers = [
     "Operating System :: OS Independent",
     "Environment :: GPU :: NVIDIA CUDA",
]

dependencies = ["torchlanc", "packaging"]

[project.urls]
Repository = "https://github.com/Artificial-Sweetener/comfyui-WhiteRabbit"
Documentation = "https://github.com/Artificial-Sweetener/comfyui-WhiteRabbit/wiki"
"Bug Tracker" = "https://github.com/Artificial-Sweetener/comfyui-WhiteRabbit/issues"

[tool.comfy]
PublisherId = "artificialsweetener"
DisplayName = "WhiteRabbit"
Icon = ""
includes = []
