[project]
name = "wywywywy-pause"
description = "Node to pause a workflow with a continue button"
version = "1.0.1"
license = { file = "LICENSE.txt" }
dependencies  = []

[project.urls]
Repository = "https://github.com/wywywywy/ComfyUI-pause"

[tool.comfy]
PublisherId = "wywywywy"
DisplayName = "ComfyUI-pause"
Icon = ""